# BracketBotOS

./: .cursorrules  .gitignore  AGENT.md  README.md  build.sh  install  pyproject.toml  setup.py  shell.nix  uninstall
.cursor/rules/: bracketbot_general.mdc
apps/: audio_led.py  dashboard.py  find_usb_device.py  follow.py  from_wav.py  hey_bracketbot.py  parrot.py  rainbow.py  realtime.py  realtime_old.py  record_video.py  strobe_blue.py  teleop.py  test_audio_devices.py  to_wav.py  viewer.py  vis.py  wasd.py  whistle.py
apps/fireplace/: main.py
apps/follow/: main.py
bbos/: __init__.py  app_manager.py  daemons  helpers.py  ipc.py  os_utils.py  paths.py  registry.py  shm.py  tf.py  time.py
bbos/daemons/camera/: calibrate.py  constants.py  daemon.py  shell.nix  test.py
bbos/daemons/depth/: calibrate.py  calibrate_opencv.py  camera-0.cameramodel  camera-1.cameramodel  constants.py  daemon.py  debug.sh  easycal.py  shell.nix  stereo_calib.yaml
bbos/daemons/drive/: calibrate.py  config.yaml  constants.py  daemon.py  driver.py  shell.nix
bbos/daemons/hotspot/: default.nix
bbos/daemons/imu/: calibrate.py  constants.py  daemon.py  driver.py  shell.nix  (+2 more)
daemons/camera/: checker  constants.py  daemon.py  shell.nix
daemons/depth/: constants.py
daemons/drive/: daemon.py  driver.py
daemons/hotspot/: 90-wlan0-ap.rules
daemons/logger/: types.h
daemons/manager/: manager.py
daemons/mobile_imu/: constants.py  daemon.py
images/: Automation_Custom_Script.sh  dietpi.txt  dietpiEnv.txt  flash.sh
images/rpi5/: config.txt
test/: test_ipc.py  test_ipc_debug.py
(+48 files in other folders)
