[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bbos"
version = "0.0.1"
description = "BracketBot OS"
authors = [{ name = "Raghava Uppuluri" }]
urls = { Homepage = "https://github.com/BracketBotInc/BracketBotOS" }
dependencies = [
  "sshkeyboard",
  "posix_ipc",
  "numpy",
  "pillow",
]
requires-python = ">=3.7"

[tool.setuptools]
packages = ["bbos"]
