[build-system]
requires = ["setuptools>=64", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbos"
version = "0.0.1"
description = "BracketBot OS"
authors = [{ name = "Raghava Uppuluri" }]
urls = { Homepage = "https://github.com/BracketBotInc/BracketBotOS" }
dependencies = [
  "posix_ipc",
  "numpy",
]
requires-python = ">=3.7"

[tool.setuptools]
packages = ["bbos"]
include-package-data = true

[tool.setuptools.package-data]
"bbos" = ["**/*.py"]